@@ -1,3 +1,8 @@
+2009-01-12  Tor Lillqvist  <tml@novell.com>
+
+	* glib/goption.c (parse_arg): Guard against a mis-written
+	GOptionArgFunc that has returned FALSE but not set the GError.
+
 2008-01-09  Matthias Clasen  <mclasen@redhat.com>
 
 	* configure.in: Bump version
